using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isOnWall = "isOnWall";
    internal static string AttackTrigger = "attack";
    internal static string RangedAttackTrigger = "rangedAttack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string hitTrigger = "hit";
    internal static string attackCooldown = "attackCooldown";
}